tyring real domain

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,32 +1,48 @@
 events {}
 http {
   server {
-      listen 5000; 
-      root /data/www;
-      # location / {
-      #     try_files $uri $uri/ =404;
-      #     add_header Cache-Control "s-maxage=400 maxage=200";
-      # }
-      # error_page 404 /404.html;
-      # location = /404.html {
-      #   root   /usr/share/nginx/html;
-      #   add_header Cache-Control "no-cache" always;
-      # }
-      location ~ / {
-         proxy_pass http://app:5002;
-      }
-      # location  /aaa/ {
-      #   root /data/www;
-      #   try_files /index.html =404;
-      # }
+    listen 9000; 
+    server_name cloud.cypherium.io;
+    location ~ / {
+        proxy_pass http://app:5002;
+    }
+  
+    # Any request to this server will first be sent to this URL
+    auth_request /vouch-validate;
 
-      # location = /robots.txt {
-      #  root /data/www;
-      #  try_files /robots.txt =500;
-      # }
+    location = /vouch-validate {
+      # This address is where Vouch will be listening on
+      proxy_pass http://vouch:9090/validate;
+      proxy_pass_request_body off; # no need to send the POST body
 
-      # location ~* ^/shop.asp/?$ {
-      #   proxy_pass http://app:5002/shop permanent;
-      # }
+      proxy_set_header Content-Length "";
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      # these return values are passed to the @error401 call
+      auth_request_set $auth_resp_jwt $upstream_http_x_vouch_jwt;
+      auth_request_set $auth_resp_err $upstream_http_x_vouch_err;
+      auth_request_set $auth_resp_failcount $upstream_http_x_vouch_failcount;
+    }
+
+    error_page 401 = @error401;
+
+    # If the user is not logged in, redirect them to Vouch's login URL
+    location @error401 {
+      return 302 http://login.avocado.lol:9090/login?url=http://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err;
+    }
+  }
+
+  server {
+    listen 9090;
+    server_name cloud-login.cypherium.io;
+
+    # Proxy to your Vouch instance
+    location / {
+      proxy_set_header  Host  login.avocado.lol;
+      proxy_set_header  X-Forwarded-Proto http;
+      proxy_pass        http://vouch:9090;
+    }
   }
 } 
