--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,16 @@ services:
       context: .
       dockerfile: nginx.dockerfile
     ports:
-      - "5000:5000"
+      - "80:80"
+      - "9090:9090"
     links:
       - app
+      - vouch
   app:
     build:
       context: .
       dockerfile: app.dockerfile
   vouch:
-    image: voucher/vouch-proxy
-    ports:
-      - "9090:9090"
+    build:
+      context: .
+      dockerfile: vouch.dockerfile
