change to the right domain

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,7 @@ http {
 
     # If the user is not logged in, redirect them to Vouch's login URL
     location @error401 {
-      return 302 http://login.avocado.lol:9090/login?url=http://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err;
+      return 302 https://cloud-login.cypherium.io/login?url=http://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err;
     }
   }
 
@@ -40,7 +40,7 @@ http {
 
     # Proxy to your Vouch instance
     location / {
-      proxy_set_header  Host  login.avocado.lol;
+      proxy_set_header  Host  cloud-login.cypherium.io;
       proxy_set_header  X-Forwarded-Proto http;
       proxy_pass        http://vouch:9090;
     }
