add some public

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,9 @@ http {
     }
   
     # Any request to this server will first be sent to this URL
-    auth_request /vouch-validate;
+    location ~ /private {
+      auth_request /vouch-validate;
+    }
 
     location = /vouch-validate {
       # This address is where Vouch will be listening on
