set only /private is protected

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ http {
     }
   
     # Any request to this server will first be sent to this URL
-    location ~ /private {
+    location = /private {
       auth_request /vouch-validate;
     }
 
