--- a/nginx.conf
+++ b/nginx.conf
@@ -32,7 +32,7 @@ http {
 
     # If the user is not logged in, redirect them to Vouch's login URL
     location @error401 {
-      return 302 https://cloud-login.cypherium.io/login?url=http://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err;
+      return 302 https://cloud-login.cypherium.io/login?url=https://$http_host$request_uri&vouch-failcount=$auth_resp_failcount&X-Vouch-Token=$auth_resp_jwt&error=$auth_resp_err;
     }
   }
 
