--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ http {
     # Proxy to your Vouch instance
     location / {
       proxy_set_header  Host  cloud-login.cypherium.io;
-      proxy_set_header  X-Forwarded-Proto http;
+      proxy_set_header  X-Forwarded-Proto https;
       proxy_pass        http://vouch:9090;
     }
   }
