--- a/vouch-config.yml
+++ b/vouch-config.yml
@@ -9,7 +9,7 @@ vouch:
   # - OR -
   # instead of setting specific domains you may prefer to allow all users...
   # set allowAllUsers: true to use Vouch Proxy to just accept anyone who can authenticate at the configured provider
-  # allowAllUsers: true
+  allowAllUsers: true
 
 # Generic OpenID Connect
 # including okta
