--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,7 @@ http {
     # Any request to this server will first be sent to this URL
     location = /private {
       auth_request /vouch-validate;
+      proxy_pass http://app:5002;
     }
 
     location = /vouch-validate {
