--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,19 @@ http {
   server {
     listen 9000; 
     server_name cloud.cypherium.io;
-    location ~ / {
+    location / {
+      root /wwwroot/;
+      try_files $uri $uri/ @phpproxy;
+      types {
+        text/html  html;
+        image/gif  gif;
+        image/jpeg jpg;
+        image/svg+xml svg;
+      }
+      default_type text/html;
+    }
+    error_page 404 /404.html;
+    location @phpproxy {
         proxy_pass http://app:5002;
     }
   
